fixed e-mail link on all pages

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
  <div id="contact">
           <p><a href="resume.pdf">resumé</a><br />
-    	  <a href="mailto:veronika@twodee.com">veronika@twodee.com</a><br />
+    	  <a href="mailto:veronika.goldberg@gmail.com">veronika.goldberg@gmail.com</a><br/>
     	  847 849 7234</p>
   	    
 	</div><!--end of contact-->
