--- a/journal.html
+++ b/journal.html
@@ -45,7 +45,7 @@
 
  <div id="contact">
           <p><a href="resume.pdf">resumé</a><br />
-    	  <a href="mailto:veronika@twodee.com">veronika@twodee.com</a><br />
+    	  <a href="mailto:veronika.goldberg@gmail.com">veronika.goldberg@gmail.com</a><br/>
     	  847 849 7234</h3>
   	    
 		</div><!--end of contact-->
