--- a/work.html
+++ b/work.html
@@ -56,7 +56,7 @@
 
  <div id="contact">
           <p><a href="resume.pdf">resumé</a><br />
-    	  <a href="mailto:veronika@twodee.com">veronika@twodee.com</a><br />
+    	  <a href="mailto:veronika.goldberg@gmail.com">veronika.goldberg@gmail.com</a><br/>
     	  847 849 7234</p>
           
           
